--- a/frontend/src/components/header/Header.module.css
+++ b/frontend/src/components/header/Header.module.css
@@ -1,148 +1,169 @@
-/* body{
-    background: #131921;
-} */
- 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
- *{
+*{
     padding: 0;
     margin: 0;
- }
-
+}
 .header__container{
-    background: #131921;
+    background-color: #131921;
     display: flex;
-    height: 100px;
-    align-items: center;
     gap: 10px;
+    align-items: center;
     color: white;
-    /* border:  1px solid red; */
-    font-family: 'poppins';
-    color: white;
-    
+    height: 70px;
+
 }
 .logo__container{
     display: flex;
     align-items: center;
     justify-content: center;
     max-width: 250px;
-     /* border:  1px solid green; */
-     padding: 10px;
+    margin-left: 5px;
 }
-.logo__container img{
-    width: 80%;
-    padding-top: 5px;
-    margin-left: 20px;
-    vertical-align: middle;
-}
+
 .delivery{
     display: flex;
-    font-family: 'poppins';
+    justify-content: center;
     align-items: center;
-    color: white;
-    /* border:  1px solid green; */
+    gap: 3px;
+    font-weight: bold;
+    padding: 5px;
 
 }
+
+.delivery .delivery_place p{
+    
+   
+    font-size: 12px;
+    
+}
+
 .search{
     display: flex;
-   
     align-items: center;
     justify-content: center;
     border-radius: 10px;
-    width: 40%;
-    margin: 2%;
-    /* border: outset; */
-    border:  1px solid white;
-    
-    /* padding: 20px; */
-    /* height: 0px; */
-    
-}
-.search select{
-    font-family: 'poppins';
-    padding: 10px;
-    /* background: transparent; */
-/*  */
-    
-}
-.search input{ 
+    overflow: hidden;
     width: 100%;
+    flex: 1;
+}
+.search select, .search input{
     padding: 10px;
+    font-weight: bold;
+    outline: 1px solid white;
 }
 
-.info{
-    display: flex;
-    /* border:  1px solid green; */
-    width: auto;
-    gap: 40px;
+.search select{
+    border: none;
 }
- .country{
-    display: flex;
-    /* border:  1px solid red; */
-    align-items: center;
-
-}
-.country img{
-    width: 20px;
-    height: 30px;
-    align-items: center;
-}
-.country select{
-    width: 50px;
-    /* border:  1px solid red; */
-
-    align-items: center;
-    background: transparent;
-    color: white;
-}
-.country option{
-    height: 10px;
-    width: 10px;
-    /* border:  1px solid green; */
-}
-
-.form{
-    display: flex;
-    align-items: center;
-    font-family: 'poppins';
-     /* border:  1px solid rgb(244, 76, 25); */
-     padding: 10px;
-     text-decoration: none;
-    
-}
-.form a{
-    text-decoration: none;
-    color: white;
-}
-.form span{
-    display: flex;
-
-}
-.orders{
-    padding: 10px;
-    
-
-}
-.orders a{
-    color: white;
-    text-decoration: none;
-}
-
-.carts{
-    display: flex;
-    padding: 10px;
-    gap: 20px;
-}
-
-.carts .carts_cart{
-    position: relative;
-}
-.carts .carts_cart span{
-    position: absolute;
-    top: 0;
-    left: 2;
-
-}
-.header__container a:hover{
+.search input{
     border: 1px solid white;
-    padding: 20px;
+    width: 100%;
+    margin-right: -2px;
+}
+.search svg{
+    padding: 7px;
+    background-color: #e8be15;
+    color: #1a1a1a;
+}
+
+.search svg:hover{
+    background-color: #d49644;
+}
+
+.search:focus-within{
+    border: 2px solid rgb(229, 179, 27);
+}
+
+.order__container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 450px;
+    gap: 10px;
+}
+.order__container a{
+    text-decoration: none;
+    color: white;
+
+}
+.order__container p{
+    font-size: 10px;
+}
+.language {
+    
+    width: 90px;
+    display: flex;
+    padding: 10px;
+    
+}
+.language select {
+    background-color: #1a1a1a;
+    border: none;
+    color: white;
+}
+
+.language img{
+    width: 40%;
+}
+.cart{
+    position: relative;
+    margin-right: 10px;
+}
+
+.cart span{
+    position: absolute;
+    font-weight: bold;
+    font-size: 20px;
+    top: -15px;
+    left: 10px;
+    background-color: transparent;
+    color: orange;
+}
+
+.order__container a:hover, .delivery:hover, .logo__container a:hover, .lower__container ul li:hover{
+    border: 0.5px solid white;
+    border-radius: 3px;
+    padding: 2px;
+    transform: scale(1);
+}
+.lower__container{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    padding: 10px 10px 5px 10px;
+    background-color: #232F3E;
+    color: white;
+    font-size: 14px;
+}
+
+.lower__container ul{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    list-style: none;
+}
+.lower__container ul li span{
+    display: flex;
+    gap: 5px;
+    align-items: center;
+    font-weight: bold;
+}
+.lower__container ul li{
+    padding: 5px;
+}
+
+@media screen and (max-width: 750px){
+    .header__container{
+        display: flex;
+        flex-direction: column !important;
+        height: auto;
+    }
+    .lower__container ul li:not(:first-child){
+        display: none;
+
+    }
+    .language{
+        display: none;
+    }
+
 }
