--- a/frontend/src/components/catogory/Catagory.module.css
+++ b/frontend/src/components/catogory/Catagory.module.css
@@ -11,13 +11,14 @@
     width: 350px;
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    gap: 30px;
+    gap: 0px;
+    border-radius: 5px;
     
 
     
 }
 .catagory img{
-    width: 96%;
+    width: 300px;
     object-fit: contain;
     max-height: 250px;
     padding: 10px 10px;
@@ -31,6 +32,7 @@
 .catagory h2, .catagory p{
     padding: 5px;
     margin-left: 5px;
+    font-size: 14px;
 }
 
 .catagory p{
@@ -43,7 +45,7 @@
 .Catagory__container{
     position: relative;
     top: 0%;
-
+    
     margin-top: -15rem;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
