--- a/frontend/src/components/header/Header.module.css
+++ b/frontend/src/components/header/Header.module.css
@@ -5,11 +5,17 @@
 .header__container{
     background-color: #131921;
     display: flex;
+    width: 100%;
     gap: 10px;
     align-items: center;
     color: white;
     height: 70px;
 
+}
+.fixed{
+    position: sticky;
+    top: 0;
+    z-index: 100;
 }
 .logo__container{
     display: flex;
@@ -57,7 +63,7 @@
 .search input{
     border: 1px solid white;
     width: 100%;
-    margin-right: -2px;
+    /* margin-right: -2px; */
 }
 .search svg{
     padding: 7px;
@@ -124,7 +130,7 @@
     border: 0.5px solid white;
     border-radius: 3px;
     padding: 2px;
-    transform: scale(1);
+    /* transform: scale(0.5); */
 }
 .lower__container{
     display: flex;
