i amke all thing fine as the real amazon amazing one

--- a/frontend/src/components/header/Header.module.css
+++ b/frontend/src/components/header/Header.module.css
@@ -174,3 +174,12 @@
     }
 
 }
+.lower__container{
+    display: space-between;
+}
+
+.my{
+    padding-left: 750px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #e8be15;
+}
